--- a/吾輩.md
+++ b/吾輩.md
@@ -7,4 +7,4 @@
 何でも薄暗いじめじめした所でワンワン泣いていた事だけは記憶している。
 吾輩はここで始めて人間というものを見た。
 しかもあとで聞くとそれは学生という人間中で一番獰悪な種族であったそうだ。
-この書生というのは時々我々を捕まえて煮て食うという話である。
+この学生というのは時々我々を捕まえて煮て食うという話である。
